[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "certguard"
version = "0.2.0"
description = "CLI tool to scan TLS certificates and check expiry dates. Connects to any host:port, extracts subject, issuer, SANs, validity dates, serial number, and SHA-256 fingerprint."
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
dependencies = [
    "click>=8.1",
]

[project.scripts]
certguard = "certguard.cli:cli"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-asyncio", "ruff", "mypy", "bandit"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "N",     # pep8-naming
    "RUF",   # ruff-specific
    "S",     # flake8-bandit (security)
    "T20",   # flake8-print
    "PTH",   # flake8-use-pathlib
    "TCH",   # flake8-type-checking
    "C4",    # flake8-comprehensions
    "PIE",   # flake8-pie
    "RET",   # flake8-return
    "ERA",   # eradicate (commented-out code)
    "PGH",   # pygrep-hooks
    "FLY",   # flynt
    "PERF",  # perflint
    "FURB",  # refurb
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S107"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
